spl/tests/compile_fail/close_mint.stderr
error: unknown key-value directive `close = ...`
  --> tests/compile_fail/close_mint.rs:11:20
   |
11 |     #[account(mut, close = destination)]
   |                    ^^^^^
